
*****

Modified pm.set_pdf() and pm.fetch() functions to return the
output PDF file path/name if successfully dowloaded or the entry has
a non None pdf value.
Updated docs and tests accordingly.

*****

Added pdf_file argument to pm.open() function that sets the output
PDF file path/name (even if not in the database).

*****

Enabled fetching PDF files from ADS for entries that are not in the
database.

*****

Redirect ads-add's fetch/open to cli_fetch().


*****  Sun Sep 6 13:29:18 CEST 2020  *****

Documented add, fetch, and open arguments for ads-search and ads-add.

*****

Changed fetch's open command from -open to -o, --open for consistency
with the rest of the options in the ads-add and ads-search commands.
Updated docs and tests.

*****

Cleaned up ADS and PDF docs.

*****

Bumped bibmanager version to 1.2.7.


*****  Sat Oct 24 21:17:54 CEST 2020  *****

Added stdout argument to in subprocess call to open PDF
to redirect any screen output into nothingness.

*****

Added initial implementation of the bibmanager database browser
which is enabled through the 'bibm browse' command.
The code is in the new browser.py file.
The browser provides an interactive full-screen visualization
of the entries in the database.

*****

Updated requirements (prompt_toolkit > 3.0).

*****

Updated docs to describe the new browse command.


*****  Mon Oct 26 22:10:37 CET 2020  *****

Enabled PDF fetching in browser when requested entry doesn't have one


*****  Tue Oct 27 21:06:02 CET 2020  *****

Updated pm.open() to redirect the stdout to DEVNULL to avoid blocking
async routines.

*****

Updated browser search toolbar with a completer with the BibTex keys.
Also, set ignore case to False.

*****

Tweaked MessageDialog class in browser.py to wrap text.

*****

Bumped bibmanager version to 1.3.0rc1.
(pre-release).


*****  Wed Oct 28 20:29:28 CET 2020  *****

Added replace argument to pm.fetch() function to enforce replace
without asking when the user wants.
